syntax = "proto3";

option csharp_namespace = "InventoryServiceClient";

service InventoryProto {
  rpc CheckAvailability(ProductRequest) returns (ProductAvailability);
  rpc CreateProductInventory(CreateInventoryRequest) returns (CreateInventoryResponse);
}

message ProductRequest {
  int32 productId = 1;
}

message ProductAvailability {
  bool isAvailable = 1;
  int32 stock = 2;
  string vendorName = 3;
}
message CreateInventoryRequest{
   int32 ProductId = 1;
   int32 Quantity = 2;
   float RetailPrice = 3;
   int32 VendorId = 4;
}
message CreateInventoryResponse{
   int32 InventoryId = 1;
   int32 Quantity = 2;
   int32 VendorId = 4;
}